--- a/src/app/offre-details/offre-details.page.html
+++ b/src/app/offre-details/offre-details.page.html
@@ -1,10 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>offreDetails</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="offre-search-results"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen>
 
 
 
