--- a/src/app/offre-search-results/offre-search-results.page.html
+++ b/src/app/offre-search-results/offre-search-results.page.html
@@ -1,37 +1,35 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Recherche d'offres...</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Recherche d'offres...</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen>
 
-  <ion-list >
-    <ion-list-header>
-      Résultats recherche offres :
-    </ion-list-header>
-    <div *ngFor="let offer of offers">
+    <ion-list>
+        <ion-list-header>
+            Résultats recherche offres :
+        </ion-list-header>
+        <div *ngFor="let offer of offers">
 
-<ion-item (click)="goToPageDetails(offer.id)">
+            <ion-item (click)="goToPageDetails(offer.id)">
 
-<ion-thumbnail slot="start" >
-    <img src="https://nicolasfabing.fr/ionic/imagesClub/{{offer.img}}" alt="img" style="max-height: auto; width: auto">
-</ion-thumbnail>
+                <ion-thumbnail slot="start">
+                    <img src="https://nicolasfabing.fr/ionic/imagesClub/{{offer.img}}" alt="img"
+                         style="max-height: auto; width: auto">
+                </ion-thumbnail>
 
-  <ion-label>
-    <h2>{{offer.name}}</h2>
-    <h3>Poste : {{offer.poste}}</h3>
-    <p>A partir du : {{offer.availability}}</p>
+                <ion-label>
+                    <h2>{{offer.name}}</h2>
+                    <h3>Poste : {{offer.poste}}</h3>
+                    <p>A partir du : {{offer.availability}}</p>
 
-  </ion-label>
-
-
-
+                </ion-label>
 
 
-</ion-item>
+            </ion-item>
 
-    </div>
-  </ion-list>
+        </div>
+    </ion-list>
 
 </ion-content>
