--- a/src/app/search-player/search-player.page.html
+++ b/src/app/search-player/search-player.page.html
@@ -48,7 +48,7 @@
         </ion-button>
     </form>
 
-    <div class="ion-padding">
+    <div class="ion-padding" id ="res" style="display: none">
 
         <!-- Theme classes dark, material, bootstrap -->
         <ngx-datatable
@@ -61,6 +61,36 @@
                 [sortType]="'multi'"
                 [headerHeight]="50"
                 [footerHeight]="50">
+            <ngx-datatable-column name="Nom">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{row.name}}
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Prénom">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{row.first_name}}
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Poste">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{row.poste}}
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Pieds">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{row.strong}}
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="Niveau">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    {{row.level}}
+                </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="">
+                <ng-template let-row="row" ngx-datatable-cell-template>
+                    <ion-tab-button>Détails </ion-tab-button>
+                </ng-template>
+            </ngx-datatable-column>
         </ngx-datatable>
 
     </div>
