--- a/src/app/offre-details/offre-details.page.html
+++ b/src/app/offre-details/offre-details.page.html
@@ -42,7 +42,8 @@
 
             <ion-row class="justify-content-center padding-top">
                 <ion-col size="8">
-                    <ion-button expand="block" (click)="addApplication()">POSTULER</ion-button>
+                    <ion-button expand="block" (click)="addApplication()">Postuler à cette offre</ion-button>
+                    <ion-button expand="block" (click)="addFavorite()">Ajouter aux favoris</ion-button>
                 </ion-col>
             </ion-row>
         </div>
