Recherche d'une offre fonctionnel avec le formulaire

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,5 @@
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet id="content1"></ion-router-outlet>
+  <ion-router-outlet id="content1" [swipeGesture]="false"></ion-router-outlet>
 </ion-app>
