--- a/src/app/offre-search-results/offre-search-results.page.html
+++ b/src/app/offre-search-results/offre-search-results.page.html
@@ -1,5 +1,8 @@
 <ion-header>
     <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="search-offer"></ion-back-button>
+        </ion-buttons>
         <ion-title>Recherche d'offres...</ion-title>
     </ion-toolbar>
 </ion-header>
