--- a/src/app/search-offer/search-offer.page.html
+++ b/src/app/search-offer/search-offer.page.html
@@ -14,31 +14,31 @@
     <ion-list lines=" full" class="ion-no-margin ion-no-padding">
       <ion-item>
         <ion-label position="stacked">Type de sport</ion-label>
-        <ion-input inputmode="text" formControlName="sport_type" value="FOOTBALL" disabled=""></ion-input>
+        <ion-input inputmode="text" formControlName="sport_type" value="FOOTBALL" disabled></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="stacked">Pays</ion-label>
+        <ion-label position="stacked">Pays (France, Mexico...)</ion-label>
         <ion-input inputmode="text" formControlName="country" value=""></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="stacked">Division</ion-label>
+        <ion-label position="stacked">Division (Ligue 1, Bundesliga, Premiere League...)</ion-label>
         <ion-input inputmode="text" formControlName="division" value=""></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="stacked">Poste</ion-label>
+        <ion-label position="stacked">Poste (BU, AD, AG...)</ion-label>
         <ion-input inputmode="text" formControlName="post" value=""></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="stacked">Côté</ion-label>
+        <ion-label position="stacked">Côté (Droite, Gauche où Ambidextre)</ion-label>
         <ion-input inputmode="text" formControlName="cote" value=""></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="stacked">Niveau</ion-label>
+        <ion-label position="stacked">Niveau (Professionnel où Amateur)</ion-label>
         <ion-input inputmode="text" formControlName="level" value=""></ion-input>
       </ion-item>
 
