--- a/src/app/player-profil/player-profil.page.scss
+++ b/src/app/player-profil/player-profil.page.scss
@@ -1,3 +1,17 @@
 .error-message {
     color: var(--ion-color-danger);
 }
+
+.rowImg{
+    justify-content: center;
+    width: 100%;
+}
+
+#avatarProfil{
+    padding: 5px;
+}
+
+
+
+
+
