--- a/src/app/player-profil/player-profil.page.html
+++ b/src/app/player-profil/player-profil.page.html
@@ -42,21 +42,31 @@
       </div>
 
       <ion-item>
-        <ion-row>
-          <ion-label>Photo</ion-label>
+        <ion-label position="floating">Photo</ion-label>
+        <ion-input></ion-input>
+        <ion-row class="rowImg">
+          <img class="logo" src="{{img_new}}" *ngIf="img_new!=''" />
         </ion-row>
-        <ion-row>
+        <ion-row class="rowImg" id="oldImg">
+          <img class="logo" src="{{imgUser}}" />
+        </ion-row>
+      </ion-item>
+
+
+      <ion-row>
+        <ion-col></ion-col>
+        <ion-col>
           <ion-input type="file" name="image" formControlName="file" accept="image/*" (change)="changeListener($event)"
             id="inputFile">
           </ion-input>
-        </ion-row>
-      </ion-item>
-      <ion-row class="rowImg">
-        <img class="logo" src="{{img_new}}" *ngIf="img_new!=''" />
+          <ion-button type="submit" expand="block" color="light">UPLOAD<ion-icon name="cloud-upload-outline" slot="end">
+            </ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col></ion-col>
       </ion-row>
-      <ion-row class="rowImg" id="oldImg">
-        <img class="logo" src="{{imgUser}}" />
-      </ion-row>
+
+
     </ion-list>
 
     <ion-button type="submit" expand="block">Modifier<ion-icon slot="end" name="create">
