search_player -> resultat dans table avec button details à relier avec cv de Jules ==> finish search_offer -> fonction getOfferInfo à récup par Nicolas ==> finish search_club -> fonction getClubInfo à récup par Nicolas ==> finish
MAJ select à la place des input pour cote, niveau, poste sur les trois formulaires

--- a/src/app/search-club/search-club.page.html
+++ b/src/app/search-club/search-club.page.html
@@ -29,17 +29,23 @@
 
       <ion-item>
         <ion-label position="stacked">Poste proposé</ion-label>
-        <ion-input inputmode="text" formControlName="post" value=""></ion-input>
+        <ion-select inputmode="text" formControlName="post" value="">
+          <div id="select_poste"></div>
+        </ion-select>
       </ion-item>
 
       <ion-item>
         <ion-label position="stacked">Côté proposé</ion-label>
-        <ion-input inputmode="text" formControlName="cote" value=""></ion-input>
+        <ion-select inputmode="text" formControlName="cote" value="">
+          <div id="select_foot"></div>
+        </ion-select>
       </ion-item>
 
       <ion-item>
         <ion-label position="stacked">Niveau requis</ion-label>
-        <ion-input inputmode="text" formControlName="level" value=""></ion-input>
+        <ion-select inputmode="text" formControlName="level" value="">
+          <div id="select_niveau"></div>
+        </ion-select>
       </ion-item>
 
     </ion-list>
