--- a/src/app/club-profil/club-profil.page.html
+++ b/src/app/club-profil/club-profil.page.html
@@ -25,7 +25,6 @@
   <ion-card>
     <ion-card-header>
       <ion-grid>
-        <!-- <ion-icon name="time-outline" id="iconCard"></ion-icon> -->
         <ion-row>
           <ion-card-title>Historique</ion-card-title>
         </ion-row>
@@ -50,7 +49,30 @@
   <ion-card>
     <ion-card-header>
       <ion-grid>
-        <!-- <ion-icon name="document-text-outline" id="iconCard"></ion-icon> -->
+        <ion-row>
+          <ion-card-title>Palmares</ion-card-title>
+        </ion-row>
+      </ion-grid>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col class="ion-text-start"><strong>SAISON</strong></ion-col>
+          <ion-col class="ion-text-start"><strong>CLUB</strong></ion-col>
+          <ion-col><strong>CHAMPIONNAT</strong></ion-col>
+        </ion-row>
+        <ion-row *ngFor="let hist of tabClub.history">
+          <ion-col *ngIf="hist.prize == 1">{{hist.season}}</ion-col>
+          <ion-col *ngIf="hist.prize == 1">{{hist.nom}}</ion-col>
+          <ion-col *ngIf="hist.prize == 1">{{hist.pays}}</ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-grid>
         <ion-row>
           <ion-card-title>Offre du club</ion-card-title>
         </ion-row>
