--- a/src/app/fil-actu/fil-actu.page.html
+++ b/src/app/fil-actu/fil-actu.page.html
@@ -1,6 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-title>filActu</ion-title>
+        <a href="login-register"><ion-icon slot="end" name="log-out-outline"></ion-icon></a>
     </ion-toolbar>
 </ion-header>
 
