search_player -> fonction getPlayerInfo à récup par Nicolas ==> finish search_offer -> fonction getOfferInfo à récup par Nicolas ==> finish search_club -> fonction getClubInfo à récup par Nicolas ==> finish
MAJ select avec option TOUT, application methode recup donnees sur search-player

--- a/src/app/search-club/search-club.page.html
+++ b/src/app/search-club/search-club.page.html
@@ -30,21 +30,21 @@
       <ion-item>
         <ion-label position="stacked">Poste proposé</ion-label>
         <ion-select inputmode="text" formControlName="post" value="">
-          <div id="select_poste"></div>
+          <div id="select_poste"><ion-select-option value="">Tout</ion-select-option></div>
         </ion-select>
       </ion-item>
 
       <ion-item>
         <ion-label position="stacked">Côté proposé</ion-label>
         <ion-select inputmode="text" formControlName="cote" value="">
-          <div id="select_foot"></div>
+          <div id="select_foot"><ion-select-option value="">Tout</ion-select-option></div>
         </ion-select>
       </ion-item>
 
       <ion-item>
         <ion-label position="stacked">Niveau requis</ion-label>
         <ion-select inputmode="text" formControlName="level" value="">
-          <div id="select_niveau"></div>
+          <div id="select_niveau"><ion-select-option value="">Tout</ion-select-option></div>
         </ion-select>
       </ion-item>
 
