--- a/src/app/legalnotice/legalnotice.page.html
+++ b/src/app/legalnotice/legalnotice.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 <ion-content fullscreen="">
 
-  <p style="text-align:center">MENTIONS LEGALES :</p>
+  <p style="text-align:center">MENTIONS LEGALES</p>
 
   <p style="text-align:justify">Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs et visiteurs du site : <a href="http://www.nicolasfabing.fr" target="_blank">www.nicolasfabing.fr</a> les informations suivantes :</p>
 
