Intégration de la partie a Simon et Romain Cleanup code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu side="start" menuId="first" contentId="content1">
+  <ion-menu side="start" menuId="main" contentId="main_content">
     <ion-header>
       <ion-toolbar>
         <ion-title>Navigation</ion-title>
@@ -16,5 +16,5 @@
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet id="content1" [swipeGesture]="false"></ion-router-outlet>
+  <ion-router-outlet id="main_content" [swipeGesture]="false"></ion-router-outlet>
 </ion-app>
