--- a/src/app/search-club/search-club.page.html
+++ b/src/app/search-club/search-club.page.html
@@ -8,7 +8,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content fullscreen="">
+<ion-content fullscreen="" class="ion-padding">
   <h1>Rechercher un club </h1>
   <form [formGroup]="registrationForm" (ngSubmit)="submit()">
     <ion-list lines=" full" class="ion-no-margin ion-no-padding">
