--- a/src/app/legalnotice/legalnotice.page.html
+++ b/src/app/legalnotice/legalnotice.page.html
@@ -8,8 +8,8 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content fullscreen="">
-
+<ion-content fullscreen="" class="ion-padding">
+<ion-text>
   <p style="text-align:center">MENTIONS LEGALES</p>
 
   <p style="text-align:justify">Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs et visiteurs du site : <a href="http://www.nicolasfabing.fr" target="_blank">www.nicolasfabing.fr</a> les informations suivantes :</p>
@@ -73,5 +73,5 @@
 
   <p style="text-align:justify">Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.</p>
 
-
+</ion-text>
 </ion-content>
