Récupération de l'identifiant de l'utilisateur sur les différente page Code Cleanup

--- a/src/app/club-register/club-register.page.html
+++ b/src/app/club-register/club-register.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>clubRegister</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="login-register"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Inscription Club</ion-title>
   </ion-toolbar>
 </ion-header>
 
