--- a/src/app/login-club/login-club.page.html
+++ b/src/app/login-club/login-club.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login_club</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="login-register"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Connexion Club</ion-title>
   </ion-toolbar>
 </ion-header>
 
