--- a/src/app/fil-actu/fil-actu.page.html
+++ b/src/app/fil-actu/fil-actu.page.html
@@ -1,6 +1,9 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>filActu</ion-title>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Fil d'Actualités</ion-title>
     </ion-toolbar>
 </ion-header>
 
