--- a/src/app/logout/logout.page.html
+++ b/src/app/logout/logout.page.html
@@ -1,9 +1,1 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>logout</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-content></ion-content>
